@@ -1,20 +1,19 @@
 package com.example.demo.service.impl;
 
-import com.example.demo.model.MatchRecord;
-import com.example.demo.repository.MatchRecordRepository;
+import com.example.demo.model.*;
+import com.example.demo.repository.*;
 import com.example.demo.service.MatchmakingService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class MatchmakingServiceImpl implements MatchmakingService {
 
-    private final MatchRecordRepository repo;
+    private final MatchRecordRepository matchRepo;
 
-    public MatchmakingServiceImpl(MatchRecordRepository repo) {
-        this.repo = repo;
+    public MatchmakingServiceImpl(MatchRecordRepository matchRepo) {
+        this.matchRepo = matchRepo;
     }
 
     @Override
@@ -24,23 +23,23 @@ public class MatchmakingServiceImpl implements MatchmakingService {
 
     @Override
     public MatchRecord getMatchById(Long id) {
-        return repo.findById(id)
+        return matchRepo.findById(id)
                 .orElseThrow(() -> new RuntimeException("No match found"));
     }
 
     @Override
     public List<MatchRecord> getMatchesForUser(Long userId) {
-        return repo.findAll().stream()
+        return matchRepo.findAll().stream()
                 .filter(m ->
-                        m.getUserA().getId().equals(userId) ||
-                        m.getUserB().getId().equals(userId))
-                .collect(Collectors.toList());
+                        (m.getUserA() != null && m.getUserA().getId().equals(userId)) ||
+                        (m.getUserB() != null && m.getUserB().getId().equals(userId))
+                ).toList();
     }
 
     @Override
     public MatchRecord updateMatchStatus(Long id, String status) {
         MatchRecord match = getMatchById(id);
         match.setStatus(status);
-        return repo.save(match);
+        return matchRepo.save(match);
     }
 }
